gcc/testsuite/rust/rustc/ui/issues/issue-22468.rs
fn main() {
    let foo = "bar";
    let x = foo("baz");
// { dg-error ".E0618." "" { target *-*-* } .-1 }
}

fn foo(file: &str) -> bool {
    true
}

